# tpe-redes

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup-cluster.sh
db/: docker-compose.yaml  init.sql
ingress-nginx/: controller-deploy.yaml  ingress-nginx.yaml
istio/: gateway.yaml  virtualservice.yaml
k8s/: cluster-config.yaml  deploy.yaml
k8s/api/: deploy.yaml  service.yaml
k8s/db/: postgres-configmap.yaml  postgres-deploy.yaml  postgres-pvc.yaml  postgres-pvolume.yaml  postgres-service.yaml
k8s/nginx/: nginx_deploy.yaml  nginx_service.yaml
kiali/: kiali.yaml
prometheus/: prometheus.yaml
src/: config-map.yaml  dockerhost-endpoint.yaml  main.py
src/v1/: Dockerfile  docker-compose.yaml  pyproject.toml
src/v1/app/: db.py  main.py  models.py
src/v1/k8s/: deploy.yaml  service.yaml
src/v2/: Dockerfile  docker-compose.yaml
src/v2/app/: main.py  models.py
src/v2/k8s/: deploy.yaml  service.yaml
